--- a/app/main.css
+++ b/app/main.css
@@ -1,3 +1,11 @@
 body{
     text-align: center;
+    font-family: helvitica sans-serif
+}
+
+.tooltip{
+    background-color: dimgrey;
+    color: white;
+    padding: 5px;
+    font-size: 12px;
 }
